fix(lookmart): fix social-networks block alignment
https://jira.railsc.ru/browse/SG-7149

--- a/src/blocks/lookmart/social-networks/social-networks_old.css
+++ b/src/blocks/lookmart/social-networks/social-networks_old.css
@@ -1,8 +1,7 @@
 .social-networks_old .social-networks {
-  width: auto;
+  width: 100%;
   background: 0;
   border-radius: 0;
-  margin: 0;
   display: flex;
 }
 
